--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ Discord is Crim#2222. Cynathans is a juicers bot.
                 <li class="na">Darren Exclusive Hub content</li>
               </ul>
               <div class="btn-wrap">
-                <a href="https://discord.com/oauth2/authorize?client_id=711323381252751480&permissions=70282305&scope=bot" class="btn-buy">Invite Nathan</a>
+                <a href="https://discord.com/oauth2/authorize?client_id=711323381252751480&permissions=2184571968&scope=bot%20applications.commands" class="btn-buy">Invite Nathan</a>
               </div>
             </div>
           </div>
