--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="893" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients</p>
+            <span data-purecounter-start="0" data-purecounter-end="3082" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Users</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
@@ -90,13 +90,13 @@
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="27" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="93" data-purecounter-duration="1" class="purecounter"></span>
             <p>Banwith Usages GB</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
             <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Developers</p>
+            <p>Shards</p>
           </div>
 
         </div>
