--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="apple-touch-icon" sizes="180x180" href="https://darrennathanael.com/faviconalt.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://darrennathanael.com/faviconalt-min.png" />
 <meta name="keywords" content="Darren, Nathan, Nathanael, DarrenNathanael, developer, discord, minecraft, mcmmo, cookies, anneke">
-<link rel="icon" type="image/png" sizes="32x32" href="https://darrennathanael.com/faviconalt.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="https://darrennathanael.com/faviconalt.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="https://darrennathanael.com/faviconalt-min.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="https://darrennathanael.com/faviconalt-min.png" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@DarrenNathans" />
 <meta name="twitter:creator" content="@DarrenNathans" />
