--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="https://darrennathanael.com/mobile.css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>
-<meta http-equiv="refresh" content="0; url=https://darrennathanael.com" />
+<meta http-equiv="refresh" content="0; url=https://github.com/darrenofficial" />
 <title>Darren Nathanael &mdash; Redirecting...</title>
 <p><a href="https://darrennathanael.com/">Click me if your browser doesn't support autoredirect.</a></p>
 </head>
