--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="icon" type="image/png" sizes="32x32" href="https://darrennathanael.com/faviconalt-min.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="https://darrennathanael.com/faviconalt-min.png" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@DarrenNathans" />
-<meta name="twitter:creator" content="@DarrenNathans" />
+<meta name="twitter:site" content="@darrenuselinux" />
+<meta name="twitter:creator" content="@darrenuselinux" />
 <meta name="theme-color" content="#25CDCC">
 <meta property="og:url" content="https://darrennathanael.com" />
 <meta property="og:site_name" content="Nathan">
